@@ -7,31 +7,12 @@
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
  */
-package org.weasis.launcher;
-
-import static org.weasis.launcher.WeasisLauncher.CONFIG_DIRECTORY;
-import static org.weasis.launcher.WeasisLauncher.CONFIG_PROPERTIES_FILE_VALUE;
-import static org.weasis.launcher.WeasisLauncher.CONFIG_PROPERTIES_PROP;
-import static org.weasis.launcher.WeasisLauncher.EXTENDED_PROPERTIES_PROP;
-import static org.weasis.launcher.WeasisLauncher.P_HTTP_AUTHORIZATION;
-import static org.weasis.launcher.WeasisLauncher.P_OS_NAME;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_CODEBASE_LOCAL;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_CODEBASE_URL;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_CONFIG_HASH;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_CONFIG_URL;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_NAME;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_PATH;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_PROFILE;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_SOURCE_ID;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_USER;
-import static org.weasis.launcher.WeasisLauncher.P_WEASIS_VERSION;
+package org.weasis.pref;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.System.Logger;
-import java.lang.System.Logger.Level;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
@@ -56,12 +37,56 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamReader;
 import org.osgi.framework.Constants;
 import org.osgi.framework.Version;
+import org.slf4j.LoggerFactory;
+import org.weasis.launcher.FileUtil;
+import org.weasis.launcher.Utils;
 import org.weasis.launcher.WeasisLauncher.Type;
-import org.weasis.pref.AppPreferences;
-import org.weasis.pref.Preference;
 
 public class ConfigData {
-  private static final Logger LOGGER = System.getLogger(ConfigData.class.getName());
+  private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(ConfigData.class);
+
+  /** Name of the configuration directory. */
+  public static final String CONFIG_DIRECTORY = "conf";
+
+  public static final String APP_PROPERTY_FILE = "weasis.properties";
+  public static final String P_WEASIS_VERSION = "weasis.version";
+  public static final String P_WEASIS_PROFILE = "weasis.profile";
+  public static final String P_WEASIS_NAME = "weasis.name";
+  public static final String P_WEASIS_PATH = "weasis.path";
+  public static final String P_WEASIS_RES_DATE = "weasis.resources.date";
+  public static final String P_WEASIS_CODEBASE_LOCAL = "weasis.codebase.local";
+  public static final String P_WEASIS_SOURCE_ID = "weasis.source.id";
+  public static final String P_WEASIS_CODEBASE_URL = "weasis.codebase.url";
+  public static final String P_WEASIS_CONFIG_HASH = "weasis.config.hash";
+  public static final String P_WEASIS_PREFS_URL = "weasis.pref.url";
+  public static final String P_WEASIS_CONFIG_URL = "weasis.config.url";
+  public static final String P_WEASIS_USER = "weasis.user";
+  public static final String P_WEASIS_SHOW_DISCLAIMER = "weasis.show.disclaimer";
+  public static final String P_WEASIS_ACCEPT_DISCLAIMER = "weasis.accept.disclaimer";
+  public static final String P_WEASIS_SHOW_RELEASE = "weasis.show.release";
+  public static final String P_WEASIS_VERSION_RELEASE = "weasis.version.release";
+  public static final String P_WEASIS_I18N = "weasis.i18n";
+  public static final String P_OS_NAME = "os.name";
+  public static final String P_WEASIS_LOOK = "weasis.theme";
+  public static final String P_GOSH_ARGS = "gosh.args";
+  public static final String P_WEASIS_CLEAN_CACHE = "weasis.clean.cache";
+  public static final String P_HTTP_AUTHORIZATION = "http.authorization";
+  public static final String P_NATIVE_LIB_SPEC = "native.library.spec";
+  public static final String P_WEASIS_MIN_NATIVE_VERSION = "weasis.min.native.version";
+  public static final String P_WEASIS_RESOURCES_URL = "weasis.resources.url";
+  public static final String F_RESOURCES = "resources"; // NON-NLS
+
+  /**
+   * The property name used to specify a URL to the configuration property file to be used for the
+   * created the framework instance.
+   */
+  public static final String CONFIG_PROPERTIES_PROP = "felix.config.properties";
+
+  /** The default name used for the configuration file. */
+  public static final String CONFIG_PROPERTIES_FILE_VALUE = "base.json";
+
+  /** The property name used to specify a URL to the extended configuration file. */
+  public static final String EXTENDED_PROPERTIES_PROP = "felix.extended.config.properties";
 
   // Params, see
   // https://nroduit.github.io/en/getting-started/weasis-protocol/#modify-the-launch-parameters
@@ -77,6 +102,7 @@ public class ConfigData {
 
   private final StringBuilder configOutput = new StringBuilder();
   private final Map<String, String> felixProps = new HashMap<>();
+  private final AppPreferences preferences = new AppPreferences();
 
   public ConfigData(String[] args) {
     init(args);
@@ -84,12 +110,12 @@ public class ConfigData {
 
   public void init(String[] args) {
     this.clear();
-    LOGGER.log(Level.INFO, "Starting Weasis...");
-    LOGGER.log(Level.INFO, "Initialization of the launch configuration...");
+    LOGGER.info("Starting Weasis...");
+    LOGGER.info("Initialization of the launch configuration...");
 
     if (args != null) {
       for (int i = 0; i < args.length; i++) {
-        LOGGER.log(Level.INFO, "Main arg {0} = {1}", Integer.toString(i), args[i]);
+        LOGGER.info("Main arg {} = {}", i, args[i]);
       }
 
       int index = Utils.getWeasisProtocolIndex(args);
@@ -121,7 +147,7 @@ public class ConfigData {
     applyConfigFromArguments();
 
     // Load all the felix properties
-    AppPreferences preferences = loadConfigProperties();
+    loadConfigProperties();
 
     // Set "application config" properties, but has no effect on those already set
     initWeasisProperties(preferences);
@@ -168,13 +194,13 @@ public class ConfigData {
     // current platform
     setOsgiNativeLibSpecification();
 
-    String profile = preferences.getProperty(P_WEASIS_PROFILE, "default");
+    String profile = preferences.getValue(P_WEASIS_PROFILE, "default");
     addProperty(P_WEASIS_PROFILE, profile);
 
     String name = preferences.getProperty(P_WEASIS_NAME, "Agile"); // NON-NLS
     addProperty(P_WEASIS_NAME, name);
 
-    String version = preferences.getProperty(P_WEASIS_VERSION, "0.0.0");
+    String version = preferences.getValue(P_WEASIS_VERSION, "0.0.0");
     addProperty(P_WEASIS_VERSION, version);
 
     String codebase = properties.getProperty(P_WEASIS_CODEBASE_URL);
@@ -192,34 +218,31 @@ public class ConfigData {
 
     String portable = properties.getProperty("weasis.portable.dir");
     if (portable != null) {
-      LOGGER.log(Level.INFO, "Set default relative folders");
+      LOGGER.info("Set default relative folders");
       String pkey = "weasis.portable.dicom.directory";
-      addProperty(pkey, preferences.getProperty(pkey, "dicom,DICOM,IMAGES,images")); // NON-NLS
+      addProperty(pkey, preferences.getValue(pkey, "dicom,DICOM,IMAGES,images")); // NON-NLS
     }
 
     // Set weasis properties to Java System Properties before variables substitution.
     applyConfigToSystemProperties();
 
     filterConfigProperties(preferences);
-    if (LOGGER.isLoggable(Level.TRACE)) {
-      felixProps.forEach(
-          (k, v) ->
-              LOGGER.log(
-                  Level.TRACE, () -> String.format("Felix config: %s = %s", k, v))); // NON-NLS
+    if (LOGGER.isTraceEnabled()) {
+      felixProps.forEach((k, v) -> LOGGER.trace("Felix config: {} = {}", k, v));
     }
 
     File appFolder = new File(felixProps.get(Constants.FRAMEWORK_STORAGE)).getParentFile();
     appFolder.mkdirs();
     addProperty(P_WEASIS_PATH, appFolder.getPath());
     System.setProperty(P_WEASIS_PATH, appFolder.getPath());
-    LOGGER.log(Level.INFO, "Properties: {0}", properties);
+    LOGGER.info("Properties: {}", properties);
   }
 
   private void filterConfigProperties(AppPreferences preferences) {
     // Only required for dev purposes (running the app in IDE)
     String mvnRepo =
         System.getProperty(
-            "maven.localRepository", preferences.getProperty("maven.local.repo")); // NON-NLS
+            "maven.localRepository", preferences.getValue("maven.local.repo")); // NON-NLS
     if (mvnRepo != null) {
       System.setProperty("maven.localRepository", Utils.adaptPathToUri(mvnRepo));
     }
@@ -278,7 +301,7 @@ public class ConfigData {
     configOutput.append(properties.getProperty(P_WEASIS_CODEBASE_URL));
   }
 
-  private String applyLocalCodebase() {
+  private void applyLocalCodebase() {
     File localCodebase = findLocalCodebase();
     String baseURI = localCodebase.toURI().toString();
     if (baseURI.endsWith("/")) {
@@ -290,9 +313,8 @@ public class ConfigData {
       baseURI += "/" + CONFIG_DIRECTORY + "/";
       addProperty(CONFIG_PROPERTIES_PROP, baseURI + CONFIG_PROPERTIES_FILE_VALUE);
     } catch (Exception e) {
-      LOGGER.log(Level.ERROR, "Apply Codebase", e);
+      LOGGER.error("Apply Codebase", e);
     }
-    return baseURI;
   }
 
   private void applyConfigParams(Map<String, List<String>> configParams) {
@@ -303,14 +325,18 @@ public class ConfigData {
     configParams.forEach(
         (k, v) -> {
           switch (k) {
-            case PARAM_CONFIG_URL -> addProperty(P_WEASIS_CONFIG_URL, v.get(0));
-            case PARAM_CODEBASE -> addProperty(P_WEASIS_CODEBASE_URL, v.get(0));
-            case PARAM_AUTHORIZATION -> addProperty(P_HTTP_AUTHORIZATION, v.get(0));
+            case PARAM_CONFIG_URL -> addProperty(P_WEASIS_CONFIG_URL, v.getFirst());
+            case PARAM_CODEBASE -> addProperty(P_WEASIS_CODEBASE_URL, v.getFirst());
+            case PARAM_AUTHORIZATION -> addProperty(P_HTTP_AUTHORIZATION, v.getFirst());
             case PARAM_PROPERTY -> addProperties(v);
             case PARAM_ARGUMENT -> addArguments(v);
             default -> throw new IllegalStateException("Unexpected value: " + k);
           }
         });
+  }
+
+  public AppPreferences getPreferences() {
+    return preferences;
   }
 
   public List<String> getArguments() {
@@ -348,7 +374,7 @@ public class ConfigData {
           if (result.length == 2) {
             addProperty(result[0], result[1]);
           } else {
-            LOGGER.log(Level.WARNING, "Cannot parse property: {0}", value);
+            LOGGER.warn("Cannot parse property: {}", value);
           }
         });
   }
@@ -436,7 +462,7 @@ public class ConfigData {
             }
           }
         } catch (Exception e) {
-          LOGGER.log(Level.ERROR, "Cannot store the proxy password", e);
+          LOGGER.error("Cannot store the proxy password", e);
         }
       }
     }
@@ -484,10 +510,10 @@ public class ConfigData {
           try {
             val = new File(new URI(arg)).getPath();
           } catch (URISyntaxException e) {
-            LOGGER.log(Level.ERROR, "Convert URI to file", e);
+            LOGGER.error("Convert URI to file", e);
           }
         }
-        arguments.add("dicom:get -l \"" + val + "\""); // NON-NLS
+        arguments.add(STR."dicom:get -l \"\{val}\""); // NON-NLS
       }
     }
   }
@@ -576,10 +602,7 @@ public class ConfigData {
       }
 
     } catch (Exception e) {
-      LOGGER.log(
-          Level.ERROR,
-          () -> String.format("Error Loading config service %s", configServicePath), // NON-NLS
-          e);
+      LOGGER.error("Error Loading config service {}", configServicePath, e);
     } finally {
       FileUtil.safeClose(stream);
     }
@@ -612,9 +635,9 @@ public class ConfigData {
    * Reads application config files and compute WEASIS_CONFIG_HASH to check if those had been
    * updated.
    */
-  public AppPreferences loadConfigProperties() {
+  public void loadConfigProperties() {
     URI propURI = getPropertiesURI(CONFIG_PROPERTIES_PROP, CONFIG_PROPERTIES_FILE_VALUE);
-    AppPreferences preferences = new AppPreferences();
+
     // Read the properties file
     if (propURI != null) {
       configOutput.append("\n  Application configuration file = "); // NON-NLS
@@ -622,7 +645,7 @@ public class ConfigData {
       preferences.readJson(propURI);
 
     } else {
-      LOGGER.log(Level.ERROR, "No base.json path found, Weasis cannot start!");
+      LOGGER.error("No base.json path found, Weasis cannot start!");
     }
 
     propURI = getPropertiesURI(EXTENDED_PROPERTIES_PROP, null);
@@ -643,33 +666,28 @@ public class ConfigData {
     // Build a hash the properties just after reading. It will allow comparing with a new app
     // instance.
     properties.put(P_WEASIS_CONFIG_HASH, String.valueOf(preferences.hashCode()));
-
-    return preferences;
   }
 
   private void checkMinimalVersion(AppPreferences preferences) {
-    String val = preferences.getProperty(WeasisLauncher.P_WEASIS_MIN_NATIVE_VERSION);
+    String val = preferences.getValue(P_WEASIS_MIN_NATIVE_VERSION);
     if (Utils.hasText(val) && getProperty(P_WEASIS_CODEBASE_LOCAL) == null) {
       try {
         URI propURI = getLocalPropertiesURI(CONFIG_PROPERTIES_FILE_VALUE);
         AppPreferences localPrefs = new AppPreferences();
         localPrefs.readJson(propURI);
-        Version loc =
-            new Version(
-                localPrefs.getProperty(WeasisLauncher.P_WEASIS_VERSION).replaceFirst("-", "."));
+        Version loc = new Version(localPrefs.getValue(P_WEASIS_VERSION).replaceFirst("-", "."));
         Version min = new Version(val.replaceFirst("-", "."));
         if (loc.compareTo(min) < 0) {
-          LOGGER.log(
-              Level.WARNING,
+          LOGGER.warn(
               "Start only with the native plug-ins because the version ({}) is lower the minimal version ({}) required remotely",
               loc,
               min);
           preferences.clear();
           preferences.putAll(localPrefs);
-          System.setProperty(WeasisLauncher.P_WEASIS_MIN_NATIVE_VERSION, val);
+          System.setProperty(P_WEASIS_MIN_NATIVE_VERSION, val);
         }
       } catch (Exception e) {
-        LOGGER.log(Level.ERROR, "Cannot check compatibility with remote package", e);
+        LOGGER.error("Cannot check compatibility with remote package", e);
       }
     }
   }
@@ -686,7 +704,7 @@ public class ConfigData {
           propURL = new URI(custom);
         }
       } catch (URISyntaxException e) {
-        LOGGER.log(Level.ERROR, configProp, e);
+        LOGGER.error(configProp, e);
         return null;
       }
     } else {
@@ -701,7 +719,7 @@ public class ConfigData {
       try {
         return new File(confDir, configFile).toURI();
       } catch (Exception ex) {
-        LOGGER.log(Level.ERROR, configFile, ex);
+        LOGGER.error(configFile, ex);
       }
     }
     return null;
@@ -718,7 +736,7 @@ public class ConfigData {
     return String.valueOf(ch8);
   }
 
-  static File findLocalCodebase() {
+  public static File findLocalCodebase() {
     // Determine where the configuration directory is by figuring
     // out where weasis-launcher.jar is located on the system class path.
     String jarLocation = null;
@@ -792,7 +810,7 @@ public class ConfigData {
       } else {
         osArch = osArch.toLowerCase();
       }
-      System.setProperty(WeasisLauncher.P_NATIVE_LIB_SPEC, osName + "-" + osArch);
+      System.setProperty(P_NATIVE_LIB_SPEC, osName + "-" + osArch);
     }
   }
 }
